Another set of minuscule enhancements

--- a/2022-01-20-the-second-brain.org
+++ b/2022-01-20-the-second-brain.org
@@ -16,36 +16,38 @@ tags: [become, yourself]
 
 This is the [[https://www.youtube.com/watch?v=OP3dA2GcAh8&ab_channel=AliAbdaal][source]]
 
-So last year I spent a stupidly large amount of money on this online
-course that genuinely changed my life. It's called building a second
-brain and it promises to supercharge your productivity and creativity.
-And like I was already pretty good at the productivity stuff in terms
-of getting things done but through the course I discovered the field
-of personal knowledge management which is like the next level of
-productivity. And it really helped me unlock kind of the /next
-frontier/.
+* Preamble
 
-The main idea is that over time you build up this second brain which
-is a digital note-taking system. Whereby anything that you read watch
-and listen to that resonates with you goes into your system. And then
-you can use your second brain to organize your ideas and thoughts and
-you can ultimately convert them into your creative output.
+ So last year I spent a stupidly large amount of money on this online
+ course that genuinely changed my life. It's called building a second
+ brain and it promises to supercharge your productivity and
+ creativity. And like I was already pretty good at the productivity
+ stuff in terms of getting things done but through the course I
+ discovered the field of personal knowledge management which is like
+ the next level of productivity. And it really helped me unlock kind
+ of the /next frontier/.
 
-In this video we're going to go over the 10 fundamental principles of
-building a second brain so that you can also maximize your
-productivity and creativity. If you want to check out the course
-itself there will be a link in the video description. And very
-excitingly I am now an official alumni mentor for the course. So when
-it happens with a live cohorts which happened twice a year I'll be
-joining and offering my expert mentoring services on these live zoom
-calls. But yeah not gonna lie it's super expensive like for me.
+ The main idea is that over time you build up this second brain which
+ is a digital note-taking system. Whereby anything that you read watch
+ and listen to that resonates with you goes into your system. And then
+ you can use your second brain to organize your ideas and thoughts and
+ you can ultimately convert them into your creative output.
 
-It was totally worth it because I derive value from this sort of stuff
-and if you're the right sort of person if you're a knowledge
-worker it'll probably be worth it for you. But it's definitely /not for
-everyone/. And so hopefully in this video you'll learn the 10
-fundamental principles of it so you can start getting some of the
-knowledge from this course without having to pay for it.
+ In this video we're going to go over the 10 fundamental principles of
+ building a second brain so that you can also maximize your
+ productivity and creativity. If you want to check out the course
+ itself there will be a link in the video description. And very
+ excitingly I am now an official alumni mentor for the course. So when
+ it happens with a live cohorts which happened twice a year I'll be
+ joining and offering my expert mentoring services on these live zoom
+ calls. But yeah not gonna lie it's super expensive like for me.
+
+ It was totally worth it because I derive value from this sort of
+ stuff and if you're the right sort of person if you're a knowledge
+ worker it'll probably be worth it for you. But it's definitely /not
+ for everyone/. And so hopefully in this video you'll learn the 10
+ fundamental principles of it so you can start getting some of the
+ knowledge from this course without having to pay for it.
 
 * A Borrowed Creativity
 
@@ -217,19 +219,19 @@ versus long-term memory then you have a section on the phonological
 loop versus the visual spatial sketch pad which are aspects of working
 memory. Or whatever you've got these kind of five or six different
 intermediate packets and when you put them together they form an
-essay. But one of the crucial insights which helps make students
-lives more efficient is that a lot of these intermediate packets you
-can actually put in different essays. So what I would do when I was at
+essay. But one of the crucial insights which helps make students lives
+more efficient is that a lot of these intermediate packets you can
+actually put in different essays. So what I would do when I was at
 university and this was the method that helped me rank first in the
 group one year what I used to do is I would memorize the intermediate
 packets or the content blocks and then I'd be able to essentially in
 my head drag and drop them into whatever I say I wanted to. That was
 relevant to memory for example. And even outside the world of essay
 writing and academia it's really relevant like for you know. For
-example this video on 10 principles of building a second brain. Each of
-these 10 principles are their own intermediate packet. And I know that
-in the future when I make another kind of video or if I'm writing a
-blog post or if I'm writing a book there are surely some aspects of
+example this video on 10 principles of building a second brain. Each
+of these 10 principles are their own intermediate packet. And I know
+that in the future when I make another kind of video or if I'm writing
+a blog post or if I'm writing a book there are surely some aspects of
 this video some intermediate packets that I can just drag and drop
 into my other thing.
 
