The final cleaning

--- a/2022-01-20-the-second-brain.org
+++ b/2022-01-20-the-second-brain.org
@@ -221,146 +221,147 @@ memory. Or whatever you've got these kind of five or six different
 intermediate packets and when you put them together they form an
 essay. But one of the crucial insights which helps make students lives
 more efficient is that a lot of these intermediate packets you can
-actually put in different essays. So what I would do when I was at
-university and this was the method that helped me rank first in the
-group one year what I used to do is I would memorize the intermediate
-packets or the content blocks and then I'd be able to essentially in
-my head drag and drop them into whatever I say I wanted to. That was
-relevant to memory for example. And even outside the world of essay
-writing and academia it's really relevant like for you know. For
-example this video on 10 principles of building a second brain. Each
-of these 10 principles are their own intermediate packet. And I know
-that in the future when I make another kind of video or if I'm writing
-a blog post or if I'm writing a book there are surely some aspects of
-this video some intermediate packets that I can just drag and drop
-into my other thing.
+actually put in different essays.
+
+So what I would do when I was at university and this was the method
+that helped me rank first in the group one year what I used to do is I
+would memorize the intermediate packets or the content blocks and then
+I'd be able to essentially in my head drag and drop them into whatever
+I say I wanted to. That was relevant to memory for example. And even
+outside the world of essay writing and academia it's really relevant
+like for you know. For example this video on 10 principles of building
+a second brain. Each of these 10 principles are their own intermediate
+packet. And I know that in the future when I make another kind of
+video or if I'm writing a blog post or if I'm writing a book there are
+surely some aspects of this video some intermediate packets that I can
+just drag and drop into my other thing.
 
 So, firstly thinking in that way really helps because it means that
 it's a lot easier to put stuff together for your next project, but
 also in a way it makes it easier to get started on your current
 project. So for example when I'm writing an essay I don't think of it
 as: "Oh, damn, I need to sit down and write the whole essay." Which
-would be more of a heavy lift. I think of it as: "o'kay, I just need
+would be more of a heavy lift. I think of it as: "O'kay, I just need
 to focus on the introduction", or: "I just need to write that one
 intermediate packet of short-term memory versus long-term memory." And
 then it just kind of makes the work more doable because a big problem
 that me and a lot of other people have is getting started with doing
 the work and if there's like a big mountain in front of us. Like
-writing a whole essay. It can feel really hard but if it's just a small
-intermediate packet like writing a single paragraph it becomes a lot
-easier and then those bits those intermediate packets are then like go
-into our second brain and they're useful for future projects further
-down the line next we have the idea that you only know what you make
-and this is like a big part of the building second brain thing this is
-a big part of my personal spiel as well these days is that like we can
-read watch and listen to all the stuff that we want but really the
-stuff that we're really going to internalize and that's really going
-to affect our lives and that we can feasibly use in our future
-projects is going to be the stuff that we have created ourselves so
-whether that's reading a book and then writing a summary of it or
-whether it's listening to a podcast and kind of turning it into like a
-tweet storm of like insights from the podcast or even if it's having a
-random idea and then writing like fleshing out that idea into an
-intermediate packet and chucking it into our second brain.
+writing a whole essay.
+
+It can feel really hard but if it's just a small intermediate packet
+like writing a single paragraph. It becomes a lot easier and then those
+bits those intermediate packets are then like go into our second brain
+and they're useful for future projects further down the line.
+
+* You Only Know What You Make
+
+Next we have the idea that you only know what you make and this is
+like a big part of the building second brain thing. This is a big part
+of my personal spiel as well.
+
+These days is that like we can read watch and listen to all the stuff
+that we want, but really the stuff that we're really going to
+internalize and that's really going to affect our lives and that we
+can feasibly use in our future projects is going to be the stuff that
+we have created ourselves. So whether that's reading a book and then
+writing a summary of it or whether it's listening to a podcast and
+kind of turning it into like a tweet storm of like insights from the
+podcast or even if it's having a random idea and then writing like
+fleshing out that idea into an intermediate packet and chucking it
+into our second brain.
 
 
 When we engage with the material ourselves rather than relying on just
-pre-existing material we end up becoming much more familiar with it
-and then we can do interesting creative original whatever things with
-that stuff and actually one of my biggest regrets in life is that i
-didn't start taking notes on stuff until like last year when i
-discovered this building a second brain course and I really wish i'd
+pre-existing material we end up becoming much more familiar with it.
+And then we can do interesting creative original whatever things with
+that stuff. And actually one of my biggest regrets in life is that I
+didn't start taking notes on stuff until like last year when I
+discovered this building a second brain course and I really wish I'd
 been doing this since like the age of 15 when I first started reading
-non-fiction books because if I imagine all the hundreds of books that
-i've read over the last like decade of my life if I'd thought to
-summarize them or just just like quickly right up my insides or the
-interesting things I was thinking about or that I'd i'd come across
-from reading the book looking back at that now would have been such a
-huge treasure trove of information and now I'm having to kind of go
-back through all the books I've ever read and and like reread them and
-then summarize them and I i really wish I'd been doing that more as as
-i was growing up and so occasionally you know I'll do like an
-instagram live and people will ask me what's your biggest regret in
-life and I say honestly you know it's that I didn't take more notes
-from books or people ask you know what advice do you have for a 14
-year old it would be like bro make an evernote account make a notion
-account like whatever it doesn't matter which app you use just start
-writing down the notes from all the stuff that you're reading because
-in 10 years time you're going to be so glad that that's what you're
-doing principle number nine is you want to make it easier for your
-future self and the way that I think of my second brain.
+non-fiction books.
 
-I.e. my kind of suite of digital note-taking apps that I use for
-different different things is that ultimately I'm putting in the work
-now to create a resource that my future self is going to find helpful
-and so while right now I might be listening to a podcast and I you
-know hear the word transactional analysis let's say I'm listening to a
-podcast about transactional analysis that was an episode that me and
-my brother did on a podcast somewhat recently I might be tempted to
-just write down transactional analysis because I kind of know right
-now what it means but that's not particularly useful to my future self
-because my brain is a dumbass and I'm going to forget exactly what
-it's meant and so I'll take a little bit of time right now to write a
-few notes on it to flesh it out in my own words so that when future me
-comes across this note on transactional analysis future me will know
-exactly what current me was talking about and this is something that
-like endlessly frustrates me of what I used to do back in the day
-where I looked through my evernote from like 2015 and I think what the
-hell does this even mean like I don't remember what I was thinking
-when I took this note because I assumed too much intelligence on the
-part of my of my future self and so now when I'm creating stuff i'm
-always thinking with my future self in mind equally if I'm studying
-for an exam and I'm using anki flash cards or anything I'm thinking to
-myself my brain is a dumb ass I'm not going to remember this therefore
-i need to create the flash card or create the note in a way that my
-future self will be will easily be able to access it and that's
-another big part of the building second brain methodology and our
-final principle is the idea that you want to keep your ideas moving
-and that's kind of this.
+Because if I imagine all the hundreds of books that i've read over the
+last like decade of my life if I'd thought to summarize them or just
+just like quickly right up my insides or the interesting things I was
+thinking about or that I'd come across from reading the book. Looking
+back at that now would have been such a huge treasure trove of
+information and now I'm having to kind of go back through all the
+books I've ever read and and like reread them and then summarize them.
+And I really wish I'd been doing that more as I was growing up and
+so occasionally you know I'll do like an ~Instagram~ live and people
+will ask me what's your biggest regret in life. And I say honestly you
+know it's that I didn't take more notes from books.
 
+Or people ask, you know: "What advice do you have for a 14 year old?"
+It would be like: "Bro make an evernote account make a notion account
+like whatever it doesn't matter which app you use just start writing
+down the notes from all the stuff that you're reading because in 10
+years time you're going to be so glad that"
 
-It's it's like an anti-perfectionist take on this because one of the
-traps that we can fall into if we're building out a note-taking system
-is that we can fall into the trap of perfectionism where we think okay
-well right I've just discovered how to use notion I've watched ali and
-thomas frank's videos on how to use notion I'm going to create this
-elaborate database of all the stuff that I've ever read and it's going
-to have like 18 pieces of metadata assigned for each one and we can
-get stuck kind of appreciating the intricacies of the app and the
+* Make It Easier for Your Future Self
+
+That's what you're doing principle number nine is you want to make it
+easier for your future self and the way that I think of my second
+brain. I.e. my kind of suite of digital note-taking apps that I use
+for different things is that ultimately I'm putting in the work now to
+create a resource that my future self is going to find helpful. And so
+while right now I might be listening to a podcast and I hear the word
+transactional analysis. Let's say I'm listening to a podcast about
+transactional analysis, that was an episode that me and my brother did
+on a podcast somewhat recently. I might be tempted to just write down
+transactional analysis because I kind of know right now what it means
+but that's not particularly useful to my future self because my brain
+is a dumbass and I'm going to forget exactly what it's meant.
+
+And so I'll take a little bit of time right now to write a few notes
+on it to flesh it out in my own words. So that when future me comes
+across this note on transactional analysis future me will know exactly
+what current me was talking about. And this is something that like
+endlessly frustrates me of what I used to do back in the day where I
+looked through my ~Evernote~ from like 2015 and I think what the hell
+does this even mean. Like I don't remember what I was thinking when I
+took this note because I assumed too much intelligence on the part of
+my of my future self.
+
+And so now when I'm creating stuff I'm always thinking with my future
+self in mind equally if I'm studying for an exam and I'm using ~Anki~
+flash cards or anything. I'm thinking to myself my brain is a dumb
+ass.  I'm not going to remember this therefore I need to create the
+flash card or create the note in a way that my future self will easily
+be able to access it. And that's another big part of the building
+second brain methodology and our final principle is the idea that you
+want to keep your ideas moving and that's kind of this.
+
+It's like an anti-perfectionist take on this because one of the traps
+that we can fall into if we're building out a note-taking system is
+that we can fall into the trap of perfectionism where we think o'kay
+well right I've just discovered how to use ~Notion~ I've watched Ali
+and Thomas Frank's videos on how to use notion. I'm going to create
+this elaborate database of all the stuff that I've ever read. And it's
+going to have like 18 pieces of metadata assigned for each one. And we
+can get stuck kind of appreciating the intricacies of the app and the
 intricacies of our system rather than focusing on what matters which
 is to keep our ideas moving and get stuff kind of into our second
-brain and then organize it and distill it into our own insights and
-then convert it into creative output because really the most important
-thing is the output it really doesn't matter what's in your second
-brain so what if you save all the podcasts you've ever listened to
+brain.
+
+And then organize it and distill it into our own insights and then
+convert it into creative output because really the most important
+thing is the output. It really doesn't matter what's in your second
+brain. So what if you save all the podcasts you've ever listened to
 like unless you're doing something with that information unless you're
 turning it into something or sharing something or applying it to your
-own life in some way it's completely useless and that's why I really
-like this principle of keep your ideas moving like it's not about
-having a perfect note-taking system because there is no perfect
-note-taking system there is no perfect app it's about having a system
-that just keeps your ideas moving and flowing through it in an
-imperfect way and that's one of the key things that I learned on the
-course it's that we don't have to worry about getting it right up
-front we can just kind of improve the system over time and as long as
-we're like creating the output that's the main thing that matters so
-those were the 10 principles of building a second brain.
+own life in some way it's completely useless.
 
-I'll put a load of other links in the video description if you want to
-learn more like free resources on how to find out more about this i've
-done lots of other videos where I talk about this idea of personal
-knowledge management so you can check those out and if you want to
-check out the course if you maybe want to be mentored by me live on
-zoom calls you know this year while we're going through the cohort
-together then link in the video description check it out like I said
-it's super expensive it is absolutely not for everyone if you're a
-student and you can't afford it then you know don't hate me it's not
-for student students really it's more for creative professionals who
-are making money off of this thing and who can consider the large
-price tag and investment in their future but whether or not you want
-to check out the actual course I hope you found this video useful uh a
-few more videos coming in the series and you can click here to check
-out a playlist of other personal knowledge management related videos
-that I've done if this sort of stuff interests you and you're a
-massive nerd like me so thank you for watching and I'll see you in the
-next video bye.
+* Keep Your Ideas Moving
+
+And that's why I really like this principle of keep your ideas moving
+like it's not about having a perfect note-taking system because there
+is no perfect note-taking system there is no perfect app it's about
+having a system that just keeps your ideas moving and flowing through
+it in an imperfect way and that's one of the key things that I learned
+on the course it's that we don't have to worry about getting it right
+up front we can just kind of improve the system over time and as long
+as we're like creating the output that's the main thing that matters
+so those were the 10 principles of building a second brain.
+
