--- a/2022-01-20-the-second-brain.org
+++ b/2022-01-20-the-second-brain.org
@@ -5,7 +5,7 @@ title: The Second Brain -
 tagline: " A Life-Changing Productivity System"
 permalink: /personal/growth/second_brain.html
 categories: [personal-growth, knowledge-management]
-tags: [become, yourself]
+tags: [become, yourself, notetaking]
 ---
 #+END_EXPORT
 
