An initial prelude

--- a/2022-01-27-cognitive-biases.org
+++ b/2022-01-27-cognitive-biases.org
@@ -16,6 +16,17 @@ tags: [become, yourself, thought, contemplation]
 
 * Prelude
 
+The recent observations on human behavior enforced me to make
+conclusion about their partial self-consciousness as rational
+creatures. Popular and wide spreading approach to decision making as
+following one's heart, doing what one wants (able) to do and other
+peculiar points of view completely displace any reasonable approaches
+due to their relative complexity and stochastic nature.
+
+Naturally, who would be interesting to deeply contemplate about some
+trivial issue several hours or even days and as result achieve a total
+failure? It's ridiculous and seems like a silly time wasting.
+
 * What is cognition?
 
 * What are cognition biases?
